# hdsp_agent

./: .gitignore  AGENTS.md  BUTTON_IMPLEMENTATION_GUIDE.md  CHROME_AGENT_ANALYSIS.md  CHROME_AGENT_REFERENCE.md  CLAUDE.md  DESIGN_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  JUPYTER_AGENT_DESIGN.md  JUPYTER_AGENT_DESIGN_SPEC.md  PROJECT_STATUS.md  QUICK_START.md  README.md  build.sh  install.json  package-lock.json  package.json  pyproject.toml  run.sh  sample.parquet  setup.py  train.csv  tsconfig.json  인수인계.md
.serena/: project.yml
.taskmaster/: state.json
agent-server/: HDSP_SETUP.md  README.md  pyproject.toml
agent-server/agent_server/: main.py
agent-server/agent_server/core/: __init__.py  code_validator.py  config_manager.py  embedding_service.py  error_classifier.py  llm_client.py  llm_service.py  notebook_generator.py  prompt_builder.py  rag_manager.py  reflection_engine.py  retriever.py  summary_generator.py  task_manager.py  vllm_embedding_service.py
agent-server/agent_server/knowledge/: chunking.py  loader.py  watchdog_service.py
agent-server/agent_server/langchain/: agent.py  custom_middleware.py  llm_factory.py  prompts.py
agent-server/agent_server/langchain/executors/: jupyter_executor.py
agent-server/agent_server/langchain/middleware/: code_search_middleware.py  error_handling_middleware.py  jupyter_execution_middleware.py  rag_middleware.py  validation_middleware.py
agent-server/agent_server/langchain/tools/: __init__.py  jupyter_tools.py  shell_tools.py
agent-server/agent_server/prompts/: auto_agent_prompts.py
agent-server/agent_server/routers/: __init__.py  agent.py  chat.py  config.py  file_resolver.py  langchain_agent.py  rag.py
agent-server/agent_server/schemas/: __init__.py  agent.py  chat.py  common.py  rag.py
agent-server/scripts/: debug_rag.py
agent-server/tests/: conftest.py  test_agent_plan.py  test_api_health.py  test_auto_agent_old.py.bak  test_context_condenser.py  test_error_classifier.py  test_error_classifier_llm_fallback.py  test_error_recovery_scenarios.py  test_hitl_config.py  test_jupyter_handlers.py  test_langchain_agent.py  test_rag_components.py  test_session_manager.py  test_shell_tools.py  test_state_verifier.py
agent-server/tests/cassettes/: TestPlanGenerationIntegration.test_plan_generation_titanic_dask_eda.yaml
backend/: __init__.py  llm_service.py
claudedocs/: research_react_planning_patterns.md
demo/: replan_demo_scenarios.md
deploy/: README.md
docs/: agent_planning_flow.md  agent_prompts.md  agent_subsystems.md  agent_tools.md  debug_rag.md  project_setup.md  project_structure.md
extensions/jupyter/: README.md  build_hooks.py  main.py  package.json  playwright.config.ts  pyproject.toml  sample.py
extensions/jupyter/frontend/: logoSvg.ts
extensions/jupyter/frontend/components/: AgentPanel.tsx  ApprovalDialog.tsx  AutoAgentPanel.tsx  FileSelectionDialog.tsx  GeminiKeysPanel.tsx  PromptGenerationDialog.tsx  SettingsPanel.tsx
extensions/jupyter/frontend/hooks/: useScrollBehavior.ts
extensions/jupyter/frontend/plugins/: cell-buttons-plugin.ts  save-interceptor-plugin.ts
extensions/jupyter/frontend/services/: AgentOrchestrator.ts  ApiKeyManager.ts  ApiService.ts  TaskService.ts  ToolExecutor.ts  ToolRegistry.ts
extensions/jupyter/frontend/styles/: agent-panel.css  auto-agent.css  cell-buttons.css  launcher-icon.css  settings-panel.css
extensions/jupyter/frontend/types/: auto-agent.ts  index.ts
extensions/jupyter/frontend/utils/: SafetyChecker.ts  markdownRenderer.ts
extensions/jupyter/jupyter_ext/: __init__.py  _version.py  config.py  handlers.py
extensions/jupyter/jupyter_ext/labextension/: build_log.json  package.json
extensions/jupyter/jupyter_ext/labextension/static/: frontend_styles_index_js.2607ff74c74acfa83158.js  frontend_styles_index_js.2607ff74c74acfa83158.js.map  lib_index_js.3b89befbeeccfe30203a.js  lib_index_js.3b89befbeeccfe30203a.js.map  lib_index_js.f4390bf73fb4817a8c29.js  lib_index_js.f4390bf73fb4817a8c29.js.map  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3ba6b80.c095373419d05e6f141a.js  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3ba6b81.61e75fb98ecff46cf836.js  remoteEntry.23f92f5b7540866b8633.js  remoteEntry.23f92f5b7540866b8633.js.map  remoteEntry.ddb2d585e896d9a9835e.js  remoteEntry.ddb2d585e896d9a9835e.js.map  remoteEntry.fba6a7dc88f7cd426c47.js  remoteEntry.fba6a7dc88f7cd426c47.js.map  vendors-node_modules_babel_runtime_helpers_esm_extends_js-node_modules_emotion_serialize_dist-051195.e2553aab0c3963b83dd7.js  vendors-node_modules_emotion_cache_dist_emotion-cache_browser_development_esm_js.24edcc52a1c014a8a5f0.js  vendors-node_modules_emotion_cache_dist_emotion-cache_browser_development_esm_js.24edcc52a1c014a8a5f0.js.map  vendors-node_modules_emotion_react_dist_emotion-react_browser_development_esm_js.19ecf6babe00caff6b8a.js  vendors-node_modules_emotion_react_dist_emotion-react_browser_development_esm_js.19ecf6babe00caff6b8a.js.map  vendors-node_modules_emotion_styled_dist_emotion-styled_browser_development_esm_js.661fb5836f4978a7c6e1.js  vendors-node_modules_mui_material_index_js.985697e0162d8d088ca2.js  vendors-node_modules_mui_material_index_js.985697e0162d8d088ca2.js.map  vendors-node_modules_mui_material_utils_createSvgIcon_js.1f5038488cdfd8b3a85d.js  vendors-node_modules_mui_material_utils_createSvgIcon_js.1f5038488cdfd8b3a85d.js.map
extensions/jupyter/playwright-report/: index.html
extensions/jupyter/ui-tests/: agent.spec.ts  code-block-toggle.spec.ts
frontend/: index.ts
hdsp_agent/: __init__.py
hdsp_agent_core/: pyproject.toml
hdsp_agent_core/hdsp_agent_core/knowledge/: __init__.py  collection_index.py  collection_index.yaml
hdsp_agent_core/hdsp_agent_core/models/: agent.py  rag.py
hdsp_agent_core/hdsp_agent_core/prompts/: auto_agent_prompts.py
hdsp_agent_core/hdsp_agent_core/services/: rag_service.py
hdsp_agent_core/hdsp_agent_core/tests/: test_collection_index.py
iseeus/: auto-agent-implementation-plan.md
(+239 files in other folders)
