[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.8.3"]
build-backend = "hatchling.build"

[project]
name = "hdsp-agent"
version = "0.1.1"
description = "AI-powered code assistance for JupyterLab with cell-level actions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["jupyter", "jupyterlab", "jupyterlab-extension", "ai", "llm", "code-assistant"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter-server>=2.0.0",
    "aiohttp>=3.8.0",
    "overrides>=7.7.0",
    "ipywidgets>=8.0.0",
    "certifi>=2024.0.0",
    "tabulate>=0.9.0",
    "numpy<2",
    "pandas<2.1",
    "pyarrow<15",
    "ruff (>=0.14.8,<0.15.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hdsp-agent"
Repository = "https://github.com/yourusername/hdsp-agent.git"

[tool.hatch.version]
path = "backend/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "node_modules",
    "*.egg-info",
    ".ipynb_checkpoints",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.shared-data]
"backend/labextension" = "share/jupyter/labextensions/@hdsp-agent/extension"
"install.json" = "share/jupyter/labextensions/@hdsp-agent/extension/install.json"
"backend/etc/jupyter/jupyter_server_config.d/hdsp_agent.json" = "etc/jupyter/jupyter_server_config.d/hdsp_agent.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.3"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "backend/labextension/static/style.js",
    "backend/labextension/package.json",
]
skip-if-exists = ["backend/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
source_dir = "frontend"
build_dir = "backend/labextension"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
source_dir = "frontend"
build_dir = "backend/labextension"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
  | backend/labextension
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
extend_skip_glob = ["backend/labextension/*"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Poetry compatibility (for local development)
[tool.poetry]
name = "hdsp-agent"
version = "0.1.1"
description = "AI-powered code assistance for JupyterLab with cell-level actions"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.8.1"
jupyter-server = "^2.0.0"
aiohttp = "^3.8.0"
overrides = "^7.7.0"
ipywidgets = "^8.0.0"
certifi = "^2025.11.12"
tabulate = "^0.9.0"
numpy = "<2"
pandas = "<2.1"
pyarrow = "<15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyterlab = "^4.0.0"
hatchling = "^1.5.0"
hatch-jupyter-builder = "^0.8.3"
