[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hdsp-agent-server"
version = "1.0.0"
description = "AI Agent Server for IDE integrations - FastAPI-based backend for HDSP Agent"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agent_server" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
aiohttp = "^3.11.0"
httpx = "^0.28.0"
python-multipart = "^0.0.18"
sse-starlette = "^2.2.0"
tabulate = "^0.9.0"
certifi = "^2024.0.0"
# RAG system dependencies
qdrant-client = "^1.12.0"
sentence-transformers = "^3.3.0"
watchdog = "^6.0.0"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-recording = "^0.13.0"
ruff = "^0.8.0"
httpx = "^0.28.0"

[tool.poetry.scripts]
hdsp-agent-server = "agent_server.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["agent_server"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
