[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdsp-agent-core"
version = "1.0.0"
description = "HDSP Agent Core Library - Shared components for embedded and proxy modes"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
embedded = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0,<2.3.0",
    "watchdog>=6.0.0",
    "rank-bm25>=0.2.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hdsp_agent_core*"]

[tool.setuptools.package-data]
"hdsp_agent_core.knowledge.libraries" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["hdsp_agent_core/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["hdsp_agent_core"]
omit = ["*/tests/*", "*/__pycache__/*"]
