[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "hdsp-jupyter-extension"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter_server>=2.0.1,<3",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    # Agent Server dependencies (for embedded mode)
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.2.0",
    "tabulate>=0.9.0",
    "certifi>=2024.0.0",
]
dynamic = ["version", "description", "authors", "urls"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]
# Embedded mode: Run agent logic in-process without external server
embedded = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "torch>=2.4.0",
    "watchdog>=6.0.0",
    "rank-bm25>=0.2.2",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata]
allow-direct-references = true
# Disable automatic License-File inclusion to avoid metadata compatibility issues
license-files = []

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_ext/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
packages = ["jupyter_ext"]

[tool.hatch.build.targets.wheel.force-include]
# Include agent_server and hdsp_agent_core packages (copied by build.sh)
"agent_server" = "agent_server"
"hdsp_agent_core" = "hdsp_agent_core"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_ext/labextension" = "share/jupyter/labextensions/hdsp-agent"
"install.json" = "share/jupyter/labextensions/hdsp-agent/install.json"
"jupyter_ext/etc/jupyter/jupyter_server_config.d/hdsp_jupyter_extension.json" = "etc/jupyter/jupyter_server_config.d/hdsp_jupyter_extension.json"

[tool.hatch.build.hooks.version]
path = "jupyter_ext/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_ext/labextension/static/style.js",
    "jupyter_ext/labextension/package.json",
]
skip-if-exists = ["jupyter_ext/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_ext/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
